Creacion de agregar cliente y lista clientes, eliminado y agregano imagenes/icons, Eliminacion de EmpresaActivity y modificar como se guardan los clientes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
 
     <!--Dashboard-->
     <string name="Bienvenido">Bienvenido</string>
-    <string name="empresa">Empresa</string>
+    <string name="Clientes">Clientes</string>
     <string name="gastos">Gastos</string>
     <string name="lista_tareas">Lista Tareas</string>
     <string name="tareas">Tareas</string>
