Creando ViewHolder para vizualidar los clientes creados, su aviso cuando algun campo obligatorio no esta llenado, agregando imagenes y dos .json

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,7 +76,7 @@
     <string name="uid_cliente">Uid Cliente</string>
     <string name="nombre_cliente_item">Nombre</string>
     <string name="apellido_cliente_item">Apellidos</string>
-    <string name="correo_cliente_item">Telefono</string>
+    <string name="correo_cliente_item">Correo</string>
     <string name="dni_cliente_item">Dni</string>
     <string name="telefono_cliente_item">Telefono</string>
     <string name="direccion_cliente_Item">Direccion</string>
